2011-02-24  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Eric Seidel.

        [gtk] Failing collinear arcTo canvas tests
        https://bugs.webkit.org/show_bug.cgi?id=54658

        Enable two more tests that pass after adding collinearity check
        when drawing arcTo in canvas.

        * platform/gtk/Skipped:
2011-02-24  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Eric Seidel.

        [gtk] Failing collinear arcTo canvas tests
        https://bugs.webkit.org/show_bug.cgi?id=54658

        Check for collinearity of the three points that affect how arcTo call
        results. This behavior is in accordance with the HTML standard.

        No new tests added as this is already covered by at least two tests.

        * platform/graphics/cairo/PathCairo.cpp:
        (WebCore::areaOfTriangleFormedByPoints):
        (WebCore::Path::addArcTo):

Canonical link: https://commits.webkit.org/69461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79541 268f45cc-cd09-0410-ab3c-d52691b4dbfc